# hic

./: .gitignore  README.md  pyproject.toml
hic/: __init__.py  message_store.py
hic/agents/: __init__.py  base.py  retriever.py  summarizer.py
hic/api/: __init__.py  websocket_manager.py
hic/choff/: README.md  __init__.py  parser.py
hic/conversation/: bus.py  events.py  manager.py  sqlite.py
hic/events/: __init__.py  schema.py  store.py
hic/tests/: __init__.py  test_base.py  test_choff_parser.py  test_event_store.py  test_message_store.py  test_retriever_agent.py  test_state_event.py  test_summarizer.py
hic/tests/api/: __init__.py  test_websocket_manager.py
hic/tests/conversation/: __init__.py  test_manager.py  test_sqlite.py
