[project]
name = "hic"
version = "0.1.0"
description = "Hofstadter Infinity Chat - An intelligent chat application with infinite context"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "HIC Team" }
]
dependencies = [
    "anthropic>=0.45.2",
    "fastapi[standard]>=0.115.8",
    "trio>=0.28.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.125.1",
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.4",
    "pytest-trio>=0.8.0",
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
trio_mode = true
testpaths = ["hic/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
timeout = 10

[tool.ruff]
line-length = 100
target-version = "py313"
